tests/snapshots/spanshot_request@1618393643759008229.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  request: "[ref mut x]: &[T]"
---
[ref mut x] @ p: &[T]
// Applying rule `ConstructorRef`
ref mut x @ &(*p).0: &T
// Applying rule `Binding`
x @ &mut &(*p).0: &mut &T

// Final bindings (simplified):
let x: &mut &T = &mut &(*p).0 // Borrow-check error: MutBorrowBehindSharedBorrow
