tests/snapshots/spanshot_request@16196319479836598863.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: false, simplify_expressions: true }"
---
Query: `&x: &mut T`

&x @ p: &mut T
// ERROR: no rules applies to &x @ p: &mut T
