tests/snapshots/spanshot_request@16249875126828965222.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "[x, y]: &[T, U]"
---
[x, y] @ p: &[T, U]
// Applying rule `ConstructorRef`
x @ &(*p).0: &T
y @ &(*p).1: &U

// Final bindings (simplified):
let x: &T = &(*p).0
let y: &U = &(*p).1
