tests/snapshots/spanshot_request@16315456627281805531.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: Skip
    mut_on_ref: ResetBindingMode
    allow_ref_pat_on_ref_mut: false
    simplify_expressions: false
    eat_two_layers: true
    eat_inherited_ref_alone: false
  request: "[&x]: &[&&T]"
---
[&x] @ p: &[&&T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&&T
// Applying rule `Deref`
x @ *(*p).0: &T

// Final bindings:
let x: &T = *(*p).0
