tests/snapshots/spanshot_request@16321253678222932600.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true, eat_two_layers: false, eat_inherited_ref: true }"
---
Query: `ref x: T`

ref x @ p: T
// Applying rule `Binding`
x @ &p: &T

// Final bindings:
let x: &T = &p
