tests/snapshots/spanshot_request@16350076387864960285.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: Skip
    mut_on_ref: ResetBindingMode
    allow_ref_pat_on_ref_mut: false
    simplify_expressions: false
    eat_two_layers: true
    eat_inherited_ref_alone: false
  request: "[&x]: &[T]"
---
[&x] @ p: &[T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &T
// Type error for `&x @ &(*p).0: &T`: TypeMismatch
